fix: add spacing for icons in slider

--- a/src/app/ng-mat-icon-bar/mat-icon-bar/mat-icon-bar.component.scss
+++ b/src/app/ng-mat-icon-bar/mat-icon-bar/mat-icon-bar.component.scss
@@ -51,3 +51,13 @@
         transform: rotate(360deg);
     }
 }
+
+.mat-icon-bar_items /deep/ mat-icon {
+    border-radius: 50%;
+    &:not(:first-child) {
+        padding-left: 16px;
+    }
+    &:last-child {
+        padding-right: 16px;
+    }
+}
